source/stylesheets/site.css.scss
/* ... */
.land {
  fill: #fff;
  stroke: #87b1c8;
}
#map-bubbles-chart {
  z-index: 99;
}
.map-graphic__component {
  position: absolute;
  top: 0;
}

#world-map {
  z-index: 10;
  height: 420px;
  overflow: hidden;
  transform: translate(27px, 10px);;
}
g.axis {
  display: none;
}
#type-chart {
  position: absolute;
  top: 90px;
  left: -20px;
}
body {
  font-family: $roboto;
  font-weight: normal;
}
h1, h2 , h3, h4, h5, h6 {
  font-family: $open-sans;
  font-weight: 300;
}
.uber-viz__stories-table {
  float: none;
  overflow: hidden;
  &.dc-chart {
    float: none;
  }
}

.tip {
  max-width: 330px;
  padding: 13px 15px;
  font-family: $open-sans;
  font-weight: 300;
  z-index: 200;

  &.e {
    &:after, &:before {
      transform: rotate(90deg);
      top: calc(50% - 10px);
      left: -10px;
    }
    &:before {
      border-width: 11px;
      margin-left: -12px;
    }
  }

  @media(min-width: $x_2) {
    position: fixed !important; // override inline style
  }

  h4 {
    margin: 0;
    font-size: 18px;
  }
  ul, .bubble-chart__single-tagline {
    font-size: 14px;
    margin: 2px 0;
  }
  ul {
    padding: 0 0 0 17px;
  }
}
.bubble-chart__tooltip-color-bar div {
  height: 5px;
  float: left;
}
.bubble-chart__tooltip-color-bar {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 5px;
}

.fixed-bg {
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0; bottom: 0;
  left: 0; right: 0;
  background-image: url('/images/bg-tile.png');
  background-color: $blue;
  background-size: 30px 60px;
  background-repeat: repeat;
  z-index: -1;
}
.filter-bar {
  font-family: $open-sans;
  font-weight: 300;
  background: $gray;
  box-shadow: $shadow;
  font-size: 16px;

  &__toggle-filter {
    border-bottom: 1px solid #ccc;
    @media(min-width: $x_4) {
      display: none;
    }
  }
  &__category, &__toggle-filter {
    float: left;
    text-align: center;
    cursor: pointer;
    position: relative;
    transition: color 0.2s ease-out, opacity 0.01s linear 0.2s;;
    padding: 10px 0;
    box-sizing: border-box;
    @media(max-width: $x_4) {
      border-top: 1px solid #ccc
    }
    @media(max-width: $x_t) {
      padding: 10px;
    }
    &--selected {
      color: white;
      .filter-bar__category-color {
        height: 100%;
        @media(max-width: $x_4) {
          width: 100%;
        }
      }
    }
    &:hover {
      @media(min-width: $x_t) {
        color: white;
        .filter-bar__category-color {
          height: 100%;
        }
      }
    }
  }
  &__category-color {
    width: 100%;
    height: 4px;
    transition: height 0.2s ease-out;
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 0;
    @media(max-width: $x_4) {
      transition: width 0.2s ease-out;
      height: 100%;
      width: 8px;
    }
  }
  &__search-box {
    float: left;
    position: relative;
    .filter-bar__clear-search {
      display: none;
    }
    &--not-empty {
      .filter-bar__clear-search {
        display: block;
        position: absolute;
        right: 10px;
        top: calc(50% - 14px);
        font-size: 20px;
        cursor: pointer;
      }
    }
  }
  &__category-name, .filter-bar__search-input {
    @media(max-width: $x_t) and (min-width: $x_4) {
      height: 44px;
    }
  }
  &__category, &__search-box, &__toggle-filter {
    @media(max-width: $x_4) {
      width: 100% !important; // override inline style
    }
  }
  &__category-name {
    z-index: 12;
    position: relative;
  }
  .filter-bar__search-input {
    border: none;
    width: 90%;
    text-align: center;
    padding: 10px 5%;
    outline: none;
    &:focus {
      outline: none;
    }
  }
  div.awesomplete {
    width: 100%;
    mark, li[aria-selected=true] mark {
      background: none;
    }
  }
}

.summary-box {
  background: $gray;
  box-shadow: $shadow;
  box-sizing: border-box;
  .incident-card__title {
    font-size: 24px;
    margin: 0 0 16px 0;
    padding-left: 20px;
  }
  p {
    margin: 0 20px 20px 20px;
    width: calc(50% - 40px);
    float: left;
    @media(max-width: $x_4) {
      width: calc(100% - 40px)
    }
  }
}
.dc-grid-label {
  display: none;
}
.incident-card, .dc-grid-item {
  float: left;
  width: 316px;
  margin: 8px;
  box-shadow: $shadow;

  @media(max-width: $x_2) {
    width: calc(33% - 16px);
  }
  @media(max-width: $x_t) {
    width: calc(50% - 16px);
  }
  @media(max-width: $x_4) {
    width: calc(100% - 16px);
  }
}
.incident-card {
  &__top, &__title, &__main {
    box-sizing: border-box;
    width: 100%;
    padding: 15px;
  }
  &__top {
    width: 100%;
    font-family: $roboto;
    font-weight: bold;
    color: white;
    font-size: 13px;
    padding-top: 8px;
    padding-bottom: 7px;
    overflow: hidden;
  }
  &__date {
    float: right;
  }
  &__location {
    float: left;
  }
  &__title {
    background: white;
    font-family: $open-sans;
    background: white;
    color: black;
    font-size: 20px;
  }
  &__main {
    background: $gray;
    font-family: $roboto;
    font-weight: normal;
  }
  &__source {
    color: $dark_blue;
    margin-top: 6px;
    display: block;
    &:hover {
      text-decoration: none;
    }
  }
}
/* ... */

